# bookbot-v2

./: .gitignore  README.md  main.py  pyproject.toml  stats.py
src/bookbot/: __init__.py  main.py
tests/: __init__.py  test_main.py
